# comses.rag

./: .dockerignore  .gitignore  .gitmodules  README.md  docker-compose.dev.yml  docker-compose.yml  env.example  makefile  pyproject.toml
admin/: reset_models_db.py  seed_models_db.py
api/: Dockerfile  docker-compose.yml  main.py  pyproject.toml
api/shared/: clients.py  const.py
api/shared/activities/: llm_activities.py
api/shared/workers/ollama_worker/: Dockerfile  run.py
api/spam_check/: activities.py  dto.py  spam collection.txt  starter.py
api/spam_check/tests/:  spam_check.bru  test_cases.json  test_spamcheck.py
api/spam_check/workers/spam_check_worker/: Dockerfile  run.py
api/spam_check/workflows/: CheckSpamWorkflow.py  GenerateAndSubmitLLMReportWorkflow.py
api/spamcheck/: prompts.py
playground/: F2F-ODD.md  Model.md  asdfsadfsaf.md  example.md  test_title_breadcrumbs.ipynb
playground/pydanticai/: pydantic_model.py  seed_db.py  seeed.sql  sql_agent.ipynb  sql_agent.py
src/ingest/workflows/: IngestModelWorkflow.py
src/shared/: clients.py  const.py
src/shared/activities/: llm_activities.py  minio_activities.py  postgres_activities.py  text_activities.py  vector_store_activities.py
src/shared/llm_clients/: clients.py
src/shared/models/: base.py  model_metadata.py  vector.py
src/shared/prisma/: models-db-schema.prisma
src/shared/utils/: logging_config.py
test/bruno_api_collection/: comses.rag api.json
test/bruno_api_collection/comses.rag api/: -.bru  .bru  bruno.json  chat.bru  get-spam-report.bru  register.bru  spamcheck.bru  (+1 more)
(+21 files in other folders)
