[tool.poetry]
name = "comses-rag"
version = "0.1.0"
description = ""
authors = ["Anton Suharev <asuharev@asu.edu>"]
readme = "README.md"
packages = [{include = "comses"}]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.10.4"
langchain-text-splitters = "^0.3.5"
markitdown = "^0.0.1a3"
marker-pdf = "^1.2.3"
vision-parse = "^0.1.11"
pydantic-ai = {extras = ["logfire"], version = "^0.0.18"}
asyncpg = "^0.30.0"
devtools = "^0.12.2"
logfire = {extras = ["asyncpg"], version = "^3.1.0"}
faker = "^33.3.1"
prisma = "^0.15.0"
temporalio = "^1.9.0"
qdrant-client = "^1.13.2"
minio = "^7.2.15"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
